fix: allow all origins via allowedOriginPatterns to unblock CORS